Implementando a classe Relatorio.java usando Comparator<Cliente>